cluster/manifests/cnpg-system/cloudnative-pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/version: 1.30.1
    helm.sh/chart: cloudnative-pg-0.29.1
  name: cloudnative-pg
  namespace: cnpg-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: cloudnative-pg
      app.kubernetes.io/name: cloudnative-pg
  template:
    metadata:
      annotations:
        checksum/config: 35f4c273fdeb8c727d86e88b1a4afc2b73a8fd4f876c9d88a5e5e58a256c284e
        checksum/monitoring-config: 592ae4aaf7e60a50529c252dcd1647659db8e7be8e71d1ba72a74ee2b42daf25
        checksum/rbac: 9e607615e33cb589183d0d342106e5394f1af1e7d309e76ae54085b382bdc7a9
      labels:
        app.kubernetes.io/instance: cloudnative-pg
        app.kubernetes.io/name: cloudnative-pg
    spec:
      containers:
      - args:
        - controller
        - --leader-elect
        - --max-concurrent-reconciles=10
        - --config-map-name=cnpg-controller-manager-config
        - --webhook-port=9443
        command:
        - /manager
        image: ghcr.io/cloudnative-pg/cloudnative-pg:1.30.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        name: manager
        ports:
        - containerPort: 8080
          name: metrics
          protocol: TCP
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          initialDelaySeconds: 3
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 10001
          runAsUser: 10001
          seccompProfile:
            type: RuntimeDefault
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /readyz
            port: webhook-server
            scheme: HTTPS
          periodSeconds: 5
        volumeMounts:
        - mountPath: /controller
          name: scratch-data
        - mountPath: /run/secrets/cnpg.io/webhook
          name: webhook-certificates
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: cloudnative-pg
      terminationGracePeriodSeconds: 10
      volumes:
      - emptyDir: {}
        name: scratch-data
      - name: webhook-certificates
        secret:
          defaultMode: 420
          optional: true
          secretName: cnpg-webhook-cert
