cluster/manifests/cnpg-system/cnpg-webhook-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/managed-by: Helmraiser
    app.kubernetes.io/name: cloudnative-pg
    app.kubernetes.io/version: 1.30.1
    helm.sh/chart: cloudnative-pg-0.29.1
  name: cnpg-webhook-service
  namespace: cnpg-system
spec:
  ports:
  - name: webhook-server
    port: 443
    targetPort: webhook-server
  selector:
    app.kubernetes.io/instance: cloudnative-pg
    app.kubernetes.io/name: cloudnative-pg
  type: ClusterIP
